# gimel-blockchain

./: .gitignore  README.md  pyproject.toml
gimel/: __init__.py  _storage.txt  controller.py  entrypoint.py  gimelnode.py
gimel/blockchain/: block.py  keys.py  ledger.py  runner.py  transaction.py  wallet.py
gimel/coordinator/: server.py
gimel/network/: api.py  coordinator.py  node.py  utils.py
gimel/roles/: gimelnode.py
misc/: serializable.py
tests/: test_blockchain.py  test_ledger.py  test_transaction.py
