[tool.poetry]
name = "gimel-blockchain"
version = "0.1.0"
description = ""
authors = ["Konstantin Templin <1qnbhd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^11.0.0"
click = "^8.0.3"
jsonrpcclient = "^4.0.2"
jsonrpcserver = "^5.0.5"
requests = "^2.27.1"
Flask = "^2.0.2"
schedule = "^1.1.0"
sanic = "^21.12.1"
pymerkle = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
